--- a/src/Pretzel.Logic/packages.config
+++ b/src/Pretzel.Logic/packages.config
@@ -6,8 +6,9 @@
   <package id="DotLiquid" version="1.8.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
+  <package id="MarkdownDeep.NET" version="1.5" targetFramework="net40" />
   <package id="NDesk.Options" version="0.2.1" />
   <package id="RazorEngine" version="3.6.0" targetFramework="net45" />
-  <package id="System.IO.Abstractions" version="2.0.0.104" targetFramework="net40" />
+  <package id="System.IO.Abstractions" version="2.0.0.112" targetFramework="net40" />
   <package id="YamlDotNet" version="3.5.1" targetFramework="net40" />
 </packages>
